--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -103,6 +103,7 @@
 	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
 	"communityconfiguration-helppanel-title": "Help panel",
 	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
+	"communityconfiguration-helppanel-info-text": "The help panel can be available in any namespace, in reading or edit mode, as configured below. It includes the ability to search for help, click help links, and ask questions to either mentors or to the help desk. It displays five links and one ''view more'' link. These can be configured to be any links in the wiki, but recommendations are included below.",
 	"communityconfiguration-helppanel-gehelppanelaskmentor-label": "Where should questions from the help panel be directed?",
 	"communityconfiguration-helppanel-gehelppanelaskmentor-option-mentor-talk-page-label": "Mentor talk pages",
 	"communityconfiguration-helppanel-gehelppanelaskmentor-option-help-desk-page-label": "Help desk",
@@ -126,7 +127,7 @@
 	"communityconfiguration-helppanel-gehelppanelviewmoretitle-label": "Destination page for \"View more help articles\"",
 	"communityconfiguration-mentorship-title": "Mentorship",
 	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
-	"communityconfiguration-mentorship-info-text": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them. The ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors. [https://www.mediawiki.org/wiki/Help:Growth/Mentorship Know more about how mentorship works].",
+	"communityconfiguration-mentorship-info-text": "Newcomers are automatically assigned to mentors; these mentors are categorized as ''Automatically assigned mentors'' in [[Special:ManageMentors]]. A mentor can update their Mentor Dashboard settings to only claim mentees manually, they are categorized as ''Manually assigned mentors''. The ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors. Mentees can also receive encouraging messages from established editors, which can improve new editor retention. The Personalized praise module surfaces praiseworthy new editors to their mentor, to help productive new editors feel more engaged and involved in the community.",
 	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "Editors who meet all eligibility criteria are automatically enrolled as mentors",
 	"communityconfiguration-mentorship-gementorshipenabled-control-label": "Mentorship features are turned on",
 	"communityconfiguration-mentorship-gementorshipminimumage-label": "Minimum number of days a user must be registered to sign up as a mentor",
@@ -140,6 +141,7 @@
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
 	"communityconfiguration-growthhomepage-title": "Newcomer onboarding",
 	"communityconfiguration-growthhomepage-description": "Personalize onboarding for new account holders via post-registration help, Leveling up notifications, and defining infobox templates.",
+	"communityconfiguration-growthhomepage-info-text": "The Newcomer homepage ([[Special:Homepage]]) provides guidance for new account holders. Upon registration, if a new account holder indicates they want to create an article or add a new image to Wikipedia, we recommend they start with a smaller edit to get started, but also provide a link to further guidance.",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-label": "Newcomer homepage links",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Destination help for a link about creating a new article",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Destination page for a link about how to add images in the visual editor",
