--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -227,5 +227,6 @@
 	"growthexperiments-mentorship-enrollasmentor-summary": "Adding myself as a mentor",
 	"growthexperiments-mentorship-enrollasmentor-error-not-autoeligible": "Only users with at least $1 {{PLURAL:$1|edit|edits}} and $2 {{PLURAL:$2|day|days}} of presence can enroll as mentors.",
 	"tag-mentor list change": "Change of the mentor list",
-	"tag-mentor list change-description": "Tag applied to edits made to the structured mentor list via GrowthExperiments"
+	"tag-mentor list change-description": "Tag applied to edits made to the structured mentor list via GrowthExperiments",
+	"growthexperiments-mentor-dashboard-mentorship-disabled-with-link": "Mentorship is currently turned off. Administrators can turn on Mentorship via [[$1]]."
 }
