--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -628,5 +628,6 @@
 	"growthexperiments-levelingup-keepgoing-notification-header": "{{GENDER:$2|You’ve}} made $3 {{PLURAL:$3|suggested edit|suggested edits}}. Keep going to learn more new skills.",
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Make a suggested edit",
 	"echo-category-title-ge-newcomer": "Growth features",
-	"echo-pref-tooltip-ge-newcomer": "Notify me about tasks for newcomers and other features designed to help new users."
+	"echo-pref-tooltip-ge-newcomer": "Notify me about tasks for newcomers and other features designed to help new users.",
+	"growthexperiments-homepage-community-updates-header": "Community Updates"
 }
