--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -140,7 +140,7 @@
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Default minimum number of edits a mentee must have to be praiseworthy",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
 	"communityconfiguration-growthhomepage-title": "Newcomer onboarding",
-	"communityconfiguration-growthhomepage-description": "Personalize onboarding for new account holders via post-registration help, Leveling up notifications, and defining infobox templates.",
+	"communityconfiguration-growthhomepage-description": "Personalize onboarding for new account holders via post-registration help and Leveling up notifications.",
 	"communityconfiguration-growthhomepage-info-text": "The Newcomer homepage ([[Special:Homepage]]) provides guidance for new account holders. Upon registration, if a new account holder indicates they want to create an article or add a new image to Wikipedia, we recommend making a smaller edit first to get started and provide a link for further guidance.",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-label": "Newcomer homepage links",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Destination help for a link about creating a new article",
@@ -195,7 +195,7 @@
 	"communityconfiguration-growthsuggestededits-section_image_recommendation-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
 	"communityconfiguration-growthsuggestededits-section_image_recommendation-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type",
 	"communityconfiguration-growthsuggestededits-section_image_recommendation-learnmore-label": "Destination page for learning more about image recommendation task type",
-	"communityconfiguration-growthsuggestededits-section_image_recommendation-maxtasksperday-label": "The maximum number of \"Add an image to an unillustrated article\" suggested tasks a newcomer can complete daily",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-maxtasksperday-label": "The maximum number of \"Add an image to an article section\" suggested tasks a newcomer can complete daily",
 	"communityconfiguration-growthsuggestededits-link_recommendation-label": "Add a link",
 	"communityconfiguration-growthsuggestededits-link_recommendation-disabled-control-label": "The task is disabled.",
 	"communityconfiguration-growthsuggestededits-link_recommendation-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type",
@@ -203,7 +203,7 @@
 	"communityconfiguration-growthsuggestededits-link_recommendation-learnmore-label": "Destination page for learning more about add link task type",
 	"communityconfiguration-growthsuggestededits-link_recommendation-maximumlinkstoshowpertask-label": "Maximum number of links to show per task",
 	"communityconfiguration-growthsuggestededits-link_recommendation-excludedsections-label": "List of excluded sections from the Add link task",
-	"communityconfiguration-growthsuggestededits-link_recommendation-maxtasksperday-label": "The maximum number of \"Add an image to an article section\" suggested tasks a newcomer can complete daily",
+	"communityconfiguration-growthsuggestededits-link_recommendation-maxtasksperday-label": "The maximum number of \"Add a link\" suggested tasks a newcomer can complete daily",
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-label": "Weight of underlinked articles",
 	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Minimum required link score"
 }
