--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -205,5 +205,7 @@
 	"communityconfiguration-growthsuggestededits-link_recommendation-excludedsections-label": "List of excluded sections from the Add link task",
 	"communityconfiguration-growthsuggestededits-link_recommendation-maxtasksperday-label": "The maximum number of \"Add a link\" suggested tasks a newcomer can complete daily",
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-label": "Weight of underlinked articles",
-	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Minimum required link score"
+	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-help-text": "Affects how underlinked articles are prioritized. This field requires a percentage in its decimal form, so the number should be between 0 and 1. The more {{GENDER:|you}} increase this number, the more likely newcomers will receive underlinked article suggestions.",
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Minimum required link score",
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Minimum confidence threshold to suggest a link recommendation. This field requires a percentage in its decimal form, so the number should be between 0 and 1. If {{GENDER:|you}} increase the number, the suggestions presented to the end user will have a higher likelihood of being good suggestions, however fewer suggestions will be available. If you decrease the number, there will be more suggestions available but some will have a lower likelihood of being good quality suggestions."
 }
