--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -218,5 +218,7 @@
 	"communityconfiguration-growthsuggestededits-link_recommendation-excludedsections-label": "Field label for Suggested Edits in Community configuration",
 	"communityconfiguration-growthsuggestededits-link_recommendation-maxtasksperday-label": "Field label for Suggested Edits in Community configuration",
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-label": "Field label for Suggested Edits in Community configuration. \"Underlinked\" means that an article doesn't have enough links.",
-	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Field label for Suggested Edits in Community configuration"
+	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-help-text": "Help text for Suggested Edits in Community configuration.",
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Field label for Suggested Edits in Community configuration",
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Help text for Suggested Edits in Community configuration."
 }
