--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -79,7 +79,7 @@
 	"growthexperiments-edit-config-newcomer-tasks-references-learnmore": "Destination page for learning more about adding references.",
 	"growthexperiments-edit-config-newcomer-tasks-update-templates": "Update: templates to find articles that need to be updated with current information.",
 	"growthexperiments-edit-config-newcomer-tasks-update-learnmore": "Destination page for learning more about updating articles.",
-	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-learnmore": "Destination page for learning more about link recommendation task type.",
+	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-learnmore": "Destination page for learning more about link suggestion task type.",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-maximum-links-to-show": "The maximum number of link suggestions to show on each suggested task.",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-maximum-tasks-per-day": "The maximum number of \"Add a link\" suggested tasks a newcomer can complete daily.",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-excluded-sections": "The list of section names in which no links should be recommended.",
@@ -207,5 +207,5 @@
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-label": "Weight of underlinked articles",
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-help-text": "Affects how underlinked articles are prioritized. This field requires a percentage in its decimal form, so the number should be between 0 and 1. The more {{GENDER:|you}} increase this number, the more likely newcomers will receive underlinked article suggestions.",
 	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Minimum required link score",
-	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Minimum confidence threshold to suggest a link recommendation. This field requires a percentage in its decimal form, so the number should be between 0 and 1. If {{GENDER:|you}} increase the number, the suggestions presented to the end user will have a higher likelihood of being good suggestions, however fewer suggestions will be available. If you decrease the number, there will be more suggestions available but some will have a lower likelihood of being good quality suggestions."
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Minimum confidence threshold for link suggestions. This field requires a percentage in its decimal form, so the number should be between 0 and 1. If {{GENDER:|you}} increase the number, the suggestions presented to the end user will have a higher likelihood of being good suggestions, however fewer suggestions will be available. If you decrease the number, there will be more suggestions available but some will have a lower likelihood of being good quality suggestions."
 }
